GIF, Fixed Dimension, added more controls

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,11 @@ body {
   text-align: center;
   font-family: sans-serif;
 }
+
 canvas {
   background-color: black;
 }
 
+/* #controller > *{
+  display: block;
+} */
